--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Itinerary Builder",
-  "short_name": "Itinerary",
+  "name": "Egeria- Itinerary Builder",
+  "short_name": "Egeria",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
